在分支操作了一次

--- a/index.html
+++ b/index.html
@@ -6,4 +6,9 @@
     <body>
     	<h3>黑马 -传智播客</h3>
     </body>
+    <script>
+        window.onload = function(){
+            console.log('这是分支里1')
+        }
+    </script>
 </html>
