--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <div>
             <p>cnajch</p>
         </div>
+        <div>
+            <a href="javascript:;">we</a>
+        </div>
     </body>
 
     <script>
