--- a/index.html
+++ b/index.html
@@ -10,20 +10,10 @@
             <p>cnajch</p>
             <p>黑马</p>
             <p>程序员</p>
+            <p>tt添加的代码</p>
         </div>
 
-    <h2>dh</h2>
-
-        <h4>黑马</h4>
-
-
-        <div>
-            <a href="javascript:;">we</a>
-        </div>
-        <div>
-            <h4>黑马</h4>
-        </div>
-
+    
     </body>
 
     <script>
